// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Dedicated config should apply graph configuration: filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "actions": [
          {
            "content": [Function],
          },
          {
            "id": "rangedMonthly",
            "position": "right",
          },
        ],
        "chartType": "line",
        "color": "#06c",
        "fill": "#8bc1f7",
        "groupMetric": [
          "Cores",
          "Instance-hours",
        ],
        "isCardTitleDescription": true,
        "isMetricDisplay": false,
        "isMultiMetric": true,
        "isStacked": false,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "line",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Cores",
            "isCapacity": false,
            "isStacked": false,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Cores",
            "stroke": "#06c",
            "strokeWidth": 2,
            "yAxisUseDataSet": true,
          },
          {
            "chartType": "line",
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "Instance-hours",
            "isCapacity": false,
            "isStacked": false,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Instance-hours",
            "stroke": "#009596",
            "strokeWidth": 2,
            "yAxisUseDataSet": true,
          },
        ],
        "padding": {
          "bottom": 75,
          "left": 75,
          "right": 45,
          "top": 45,
        },
        "stringId": "Cores",
        "stroke": "#06c",
        "yAxisUseDataSet": true,
      },
    },
  ],
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should NOT display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  />,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"1.1K"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value below 1000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"500"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: product action display should display a total value below 1000000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"900K"})
  </div>,
}
`;

exports[`Product OpenShift Dedicated config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "content": [Function],
    },
    {
      "id": "rangedMonthly",
      "position": "right",
    },
  ],
  "isCardTitleDescription": true,
}
`;

exports[`Product OpenShift Dedicated config should apply hosts inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        lorem
         
        
      </React.Fragment>,
    },
    {
      "title": "12.53",
    },
    {
      "title": "20.04",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_instance_hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "core_hours": {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": 12.53,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "value": "lorem",
    },
    "instance_hours": {
      "title": "t(curiosity-inventory.header_instance_hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": 20.04,
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory_id, {"context":"OpenShift-dedicated-metrics"})",
      "value": "lorem inventory id",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header_loremIpsum, {"context":"OpenShift-dedicated-metrics"})",
      "value": "hello world",
    },
  },
}
`;

exports[`Product OpenShift Dedicated config should apply hosts inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "0.00",
    },
    {
      "title": "0.00",
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_instance_hours, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "core_hours": {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": null,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-dedicated-metrics"})",
      "value": "lorem",
    },
    "instance_hours": {
      "title": "t(curiosity-inventory.header_instance_hours, {"context":"OpenShift-dedicated-metrics"})",
      "value": null,
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory_id, {"context":"OpenShift-dedicated-metrics"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-dedicated-metrics"})",
      "value": null,
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header_loremIpsum, {"context":"OpenShift-dedicated-metrics"})",
      "value": "hello world",
    },
  },
}
`;
